fix: Update mark-up and styles for multi-select component to fix z-index issues.

--- a/views/mdc/assets/scss/components/multi-select.scss
+++ b/views/mdc/assets/scss/components/multi-select.scss
@@ -1,15 +1,13 @@
-.v-multi-select {
-  z-index: 1;
-  @extend .mdc-select;
-  @extend .v-select;
+.v-multi-select-container {
   .v-multi-select--options-list {
     position: absolute;
     width: 100%;
-    top: 55px;
+    top: 71px;
     border: 1px solid #C2C2C2;
     border-radius: 4px;
-    background: #FFFFFF;
-    z-index: 99;
+    background-color: #FFFFFF;
+    z-index: 1;
+    overflow: visible;
     > div {
       display: block;
       text-align: left;
@@ -18,8 +16,29 @@
       }
     }
   }
-  .v-multi-select--current-values {
-    padding: 19px;
-    overflow: hidden;
+
+  .v-multi-select {
+    @extend .mdc-select;
+    @extend .v-select;
+    overflow: visible;
+    background-color: #FFFFFF;
+    .v-multi-select--current-values {
+      padding: 19px;
+      overflow: hidden;
+    }
+    &:not(.mdc-select--disabled) {
+      background-color: #FFFFFF;
+    }
+    &:hover {
+      background: transparent;
+      .mdc-notched-outline .mdc-notched-outline__leading,
+      .mdc-notched-outline .mdc-notched-outline__notch,
+      .mdc-notched-outline .mdc-notched-outline__trailing {
+        border-color: rgba(0, 0, 0, 0.87);
+      }
+    }
+  }
+  .mdc-select:before {
+    background-color: transparent;
   }
 }
